# MeshEngine

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
shaders/: curvature.frag  curvature.vert
src/: common.cpp  common.h  input_callback.cpp  input_callback.h  main.cpp
src/mesh/: half_edge.cpp  half_edge.h  mesh.h  obj_loader.cpp  obj_loader.h
src/viewer/: camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h
